--- a/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-rtl-001.html
+++ b/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-rtl-001.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test (Selectors Level 4): Support for dir(ltr)</title>
+    <title>CSS Test (Selectors Level 4): Support for dir(rtl)</title>
     <link rel="author" title="Takeshi Kurosawa" href="mailto:taken.spc@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/selectors4/#dir-pseudo">
     <link rel="match" href="selectors-dir-selector-ref.html">
     <meta name="flags" content="">
-    <meta name="assert" content="The :dir(ltr) pseudo-class matches elments that has a directionality of left-to-right (ltr).">
+    <meta name="assert" content="The :dir(rtl) pseudo-class matches an elment that has a directionality of right-to-left (rtl). Since the div element has dir=rtl, the selector matches.">
     <style type="text/css">
        div {
            width: 100px;
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-	<p>Test passes if there is a <strong>filled green square</strong> and <strong>no red</strong>.</p>
+    <p>Test passes if there is a <strong>filled green square</strong> and <strong>no red</strong>.</p>
     <div dir="rtl"></div>
 </body>
 </html>
