--- a/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-ltr-001.html
+++ b/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-ltr-001.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test (Selectors Level 4): Support for dir(ltr)</title>
+    <title>CSS Selectors Level 4 Test: basic support for dir(ltr)</title>
     <link rel="author" title="Takeshi Kurosawa" href="mailto:taken.spc@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/selectors4/#dir-pseudo">
     <link rel="match" href="selectors-dir-selector-ref.html">
     <meta name="flags" content="">
-    <meta name="assert" content="The :dir(ltr) pseudo-class matches a element that has a directionality of (ltr). Since the div element has dir=ltr, the selector matches.">
+    <meta name="assert" content="The :dir(ltr) pseudo-class matches an element that has a directionality of (ltr). Since the div element has dir=ltr, the selector matches.">
     <style type="text/css">
        div {
            width: 100px;
