--- a/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-rtl-001.html
+++ b/contributors/ttwf_tokyo/takenspc/submitted/css4-selectors/selectors-dir-selector-rtl-001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test (Selectors Level 4): Support for dir(rtl)</title>
+    <title>CSS Selectors Level 4 Test: basic support for dir(rtl)</title>
     <link rel="author" title="Takeshi Kurosawa" href="mailto:taken.spc@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/selectors4/#dir-pseudo">
     <link rel="match" href="selectors-dir-selector-ref.html">
