--- a/websockets/interfaces/WebSocket/readyState/001.html
+++ b/websockets/interfaces/WebSocket/readyState/001.html
@@ -6,6 +6,6 @@
 <div id=log></div>
 <script>
 test(function(t) {
-  assert_equals((new WebSocket(SCHEME_AND_DOMAIN+'/')).readyState, WebSocket.CONNECTING);
+  assert_equals((new WebSocket(SCHEME_DOMAIN_PORT+'/')).readyState, WebSocket.CONNECTING);
 });
 </script>
