--- a/websockets/interfaces/WebSocket/readyState/002.html
+++ b/websockets/interfaces/WebSocket/readyState/002.html
@@ -6,7 +6,7 @@
 <div id=log></div>
 <script>
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   ws.readyState = 5;
   assert_equals(ws.readyState, ws.CONNECTING);
 });
