--- a/websockets/interfaces/WebSocket/readyState/003.html
+++ b/websockets/interfaces/WebSocket/readyState/003.html
@@ -7,7 +7,7 @@
 <script>
 test(function(t) {
   delete WebSocket.prototype.readyState;
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   ws.close();
   delete ws.readyState;
   assert_equals(ws.readyState, ws.CLOSING);
