--- a/websockets/interfaces/WebSocket/send/001.html
+++ b/websockets/interfaces/WebSocket/send/001.html
@@ -6,7 +6,7 @@
 <div id=log></div>
 <script>
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_throws(new TypeError(), function(){ws.send()});
 });
 </script>
