--- a/websockets/interfaces/WebSocket/send/002.html
+++ b/websockets/interfaces/WebSocket/send/002.html
@@ -6,7 +6,7 @@
 <div id=log></div>
 <script>
 test(function() {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   ws.send = 5;
   assert_equals(ws.send, 5);
 });
