--- a/websockets/interfaces/WebSocket/send/003.html
+++ b/websockets/interfaces/WebSocket/send/003.html
@@ -6,7 +6,7 @@
 <div id=log></div>
 <script>
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_throws("INVALID_STATE_ERR", function(){ws.send('a')});
 });
 </script>
