--- a/websockets/interfaces/WebSocket/send/004.html
+++ b/websockets/interfaces/WebSocket/send/004.html
@@ -7,17 +7,17 @@
 <div id=log></div>
 <script>
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_throws("INVALID_STATE_ERR", function(){ws.send('a\uDC00x')});
 }, "lone low surrogate");
 
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_throws("INVALID_STATE_ERR", function(){ws.send('a\uD800x')});
 }, "lone high surrogate");
 
 test(function(t) {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_throws("INVALID_STATE_ERR", function(){ws.send('a\uDC00\uD800x')});
 }, "surrogates in wrong order");
 </script>
