--- a/websockets/interfaces/WebSocket/url/001.html
+++ b/websockets/interfaces/WebSocket/url/001.html
@@ -6,6 +6,6 @@
 <div id=log></div>
 <script>
 test(function() {
-  assert_equals((new WebSocket(SCHEME_AND_DOMAIN)).url, SCHEME_AND_DOMAIN+'/');
+  assert_equals((new WebSocket(SCHEME_DOMAIN_PORT)).url, SCHEME_DOMAIN_PORT+'/');
 });
 </script>
