--- a/websockets/interfaces/WebSocket/url/004.html
+++ b/websockets/interfaces/WebSocket/url/004.html
@@ -6,7 +6,7 @@
 <div id=log></div>
 <script>
 test(function() {
-  var ws = new WebSocket(SCHEME_AND_DOMAIN+'/');
+  var ws = new WebSocket(SCHEME_DOMAIN_PORT+'/');
   assert_equals(ws.URL, undefined);
   assert_equals('URL' in ws, false);
   assert_equals(WebSocket.prototype.URL, undefined);
