hide meters by using CSS style

--- a/html/semantics/forms/the-meter-element/meter.html
+++ b/html/semantics/forms/the-meter-element/meter.html
@@ -16,7 +16,7 @@
     <div id="log">
     </div>
 
-    <div>
+    <div style="display: hidden">
       <meter id="meter_illegal_value" value="abc"></meter>
       <meter id="meter_without_min" value="-10"></meter>
       <meter id="meter_without_max" value="10"></meter>
