--- a/apisample.htm
+++ b/apisample.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sample HTML5 API Tests</title>
+<meta name="timeout" content="6000">
 </head>
 <body onload="load_test_attr.done()">
 <h1>Sample HTML5 API Tests</h1>
@@ -12,7 +13,7 @@
     setup_run = false;
     setup(function() {
             setup_run = true;
-          }, {timeout:6000});
+          });
     test(function() {assert_true(setup_run)}, "Setup function ran");
 
     // Two examples for testing events from handler and attributes
