Modified the TCs for CSS Trasnforms.
Fixed the problems.

--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-Z-positive.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-Z-positive.html
@@ -5,9 +5,9 @@
     <title>CSS Transforms Test: rotate3d on div element</title>
     <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotate3d-function">
-    <meta name="flags" content="dom">
+    <meta name="flags" content="">
     <link rel="match" href="reference/css-transform-3d-rotateZ-ref.html">
-    <meta name="assert" content="Get an green square by rotating an vertical rectangle for 90 degree to cover the horizontal red rectangle.">
+    <meta name="assert" content="Test checks that rotate a vertical rectangle for 90 degree on Z-axis would cover the horizontal red rectangle.">
     <style>
       div {
         height: 240px;   
