--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-X-positive.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-X-positive.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>CSS Transforms Test: rotate3d on div element</title>
     <link rel="author" title="Intel" href="http://www.intel.com">
-    <link rel='help' href='http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotate3d-function'>
-    <meta name='flags' content='dom'>
+    <link rel="help" href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotate3d-function">
+    <meta name="flags" content="">
     <link rel="match" href="reference/css-transform-3d-rotateX-ref.html">
-    <meta name='assert' content='Rotate the 2:1 rectangle on X-axis for 60 degree we will get a square and completely cover the red square, and here we use border due to the rectangle not be rotated would cover the red square.>'>
+    <meta name="assert" content="Test checks that rotate a 2:1 rectangle on X-axis for 60 degree we will get a square and completely cover the red square, and here we use border due to the rectangle not be rotated would cover the red square.">
     <style>
       div {
         left: 20px;
