--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotateX-positive.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotateX-positive.html
@@ -6,8 +6,8 @@
     <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotateX-function">
     <link rel="match" href="reference/css-transform-3d-rotateX-ref.html">
-    <meta name="flags" content="dom">
-    <meta name="assert" content="Rotate the 2:1 rectangle on X-axis for 60 degree we will get a square and completely cover the red square, and here we use border due to the rectangle not be rotated would cover the red square.">
+    <meta name="flags" content="">
+    <meta name="assert" content="Test checks that rotate a 2:1 rectangle on X-axis for 60 degree we will get a square and completely cover the red square, and here we use border due to the rectangle not be rotated would cover the red square.">
     <style>
       div {
         left: 20px;
