--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-transform-style.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-transform-style.html
@@ -7,8 +7,8 @@
     <link rel="help" href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotateY-function">
     <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-style-property">
     <link rel="match" href="reference/css-transform-3d-transform-style-ref.html">
-    <meta name="flags" content="dom">
-    <meta name="assert" content="Rotate the nested div with transform-style preserve-3d, rotated parent div for -60 degree on Y-axis then and rotated child div for 120 degree, at this time the parent and child should have equal width, then child div could cover the red box. This case works well on Firefox for ubuntu, chrome for mac, but fail on chromium for ubuntu and safari for mac.">
+    <meta name="flags" content="">
+    <meta name="assert" content="Test checks that rotate the nested div with transform-style preserve-3d, rotated parent div for -60 degree on Y-axis then and rotated child div for 120 degree, at this time the parent and child should have equal width, then child div could cover the red box.">
     <style>
       div {
         position: absolute;
@@ -47,7 +47,7 @@
     </style>
   </head>
   <body>
-    <p>Test passes if there is a gray square with <b>one bule</b> and <b>one green</b> box inside, and no any red.</p>
+    <p>Test passes if there is a gray square with <b>one blue</b> and <b>one green</b> box <b>inside</b>, and no any red.</p>
     <div class="container">
       <div class="red"></div>
       <div class="blue">
