--- a/cors/status-async.htm
+++ b/cors/status-async.htm
@@ -13,6 +13,8 @@
 
 <div id=log></div>
 <script>
+setup({timeout: 30000})
+
 function statusRequest(method, code, text, content, type) {
     async_test("Status on " + method + " " + code, { timeout: 15000 })
     .step(function() {
