--- a/XMLHttpRequest/abort-event-order.htm
+++ b/XMLHttpRequest/abort-event-order.htm
@@ -22,7 +22,7 @@
             {
                 test.step(function()
                 {
-		    actual.push(readyState);
+		    actual.push(xhr.readyState);
                 });
             };
             xhr.onloadstart = function()
