Add meta data flags to reflect SHOULD requirements
https://github.com/w3c/testtwf-website/blob/gh-pages/docs/test-templates.md#requirement-flags

--- a/html-media-capture/capture_reflect.html
+++ b/html-media-capture/capture_reflect.html
@@ -7,7 +7,7 @@
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#the-capture-attribute'>
     <link rel='help' href='http://www.w3.org/html/wg/drafts/html/CR/infrastructure.html#reflect'>
     <link rel='help' href='http://www.w3.org/html/wg/drafts/html/CR/infrastructure.html#boolean-attributes'>
-    <meta name='flags' content=''>
+    <meta name='flags' content='dom'>
     <meta name='assert' content='Test checks that the capture IDL attribute must reflect the content attribute of the same name.'>
     <script src='/resources/testharness.js'></script>
     <script src='/resources/testharnessreport.js'></script>
