--- a/html-media-capture/capture_video_deny.html
+++ b/html-media-capture/capture_video_deny.html
@@ -6,6 +6,7 @@
     <link rel='author' title='Intel' href='http://www.intel.com'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#the-capture-attribute'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#security'>
+    <meta name="flags" content="interact should">
   </head>
   <body>
     <p><strong>Make sure that there is no granted microphone or camera access.</strong></p>
