--- a/html-media-capture/capture_image.html
+++ b/html-media-capture/capture_image.html
@@ -6,6 +6,7 @@
     <link rel='author' title='Intel' href='http://www.intel.com'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#the-capture-attribute'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#security'>
+    <meta name="flags" content="interact should">
   </head>
   <body>
     <p>Click the button, allow camera access, and start to capture an image.</p>
