--- a/html-media-capture/capture_image_multiple_device.html
+++ b/html-media-capture/capture_image_multiple_device.html
@@ -6,6 +6,7 @@
     <link rel='author' title='Intel' href='http://www.intel.com'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#the-capture-attribute'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#security'>
+    <meta name="flags" content="interact should">
   </head>
   <body>
     <p><strong>This test is only useful on devices that supports multiple cameras (e.g. a front-facing camera in addition to a primary camera).</strong></p>
