--- a/html/dom/documents/dom-tree-accessors/document.body-setter-01.html
+++ b/html/dom/documents/dom-tree-accessors/document.body-setter-01.html
@@ -25,7 +25,7 @@ test(function() {
     doc.body = document.createElement("body")
   })
 }, "Should throw a HierarchyRequestError when trying to set document.body when there's no root element.")
-test(function(){
-  assert_true(originalBody === document.body);
+test(function() {
+  assert_equals(document.body, originalBody);
 }, "document.body has not changed")
 </script>
