Drop check for CR per Simon review comment.

--- a/conformance-checkers/html/media-queries/118-isvalid.html
+++ b/conformance-checkers/html/media-queries/118-isvalid.html
@@ -8,6 +8,6 @@
 9)' rel='stylesheet'> <!-- space, tab, CR, LF before & after slash -->
 </head>
 <body>
-<p>screen and (device-aspect-ratio: 16 / 9)</p>
+<p>Check that device-aspect-ratio allows space, tab, CR, LF before & after slash</p>
 </body>
 </html>
