--- a/conformance-checkers/html/media-queries/118-isvalid.html
+++ b/conformance-checkers/html/media-queries/118-isvalid.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Check that device-aspect-ratio allows space, tab, CR, LF before & after slash</title>
+<title>Check that device-aspect-ratio allows space, tab, or LF before & after slash</title>
 <link href='foo' media='screen and (device-aspect-ratio: 16 	
 / 	
-9)' rel='stylesheet'> <!-- space, tab, CR, LF before & after slash -->
+9)' rel='stylesheet'> <!-- space, tab, or LF before & after slash -->
 </head>
 <body>
-<p>Check that device-aspect-ratio allows space, tab, CR, LF before & after slash</p>
+<p>Check that device-aspect-ratio allows space, tab, or LF before & after slash</p>
 </body>
 </html>
