Use webidl2.js instead of WebIDLParser.js

--- a/dom/interfaces.html
+++ b/dom/interfaces.html
@@ -3,7 +3,7 @@
 <div id=log></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=/resources/WebIDLParser.js></script>
+<script src=/resources/webidl2.js></script>
 <script src=/resources/idlharness.js></script>
 <script type=text/plain>
 exception DOMException {
