--- a/conformance-checkers/html/parser/003-novalid.html
+++ b/conformance-checkers/html/parser/003-novalid.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>U+000D</title><p>There should be an error.&#x0d;
+<!doctype html><meta charset=utf-8><title>&#x0d;</title><p>There should be an error.&#x0d;
