--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
@@ -11,7 +11,7 @@
                                  content flows through the multicolumn layout 
                                  that is applied to the named flow."/>
     <style type="text/css">
-        #multicol-named-flow {
+        #named-flow-multicol {
             width: 360px;
             height: 200px;
             -webkit-columns: 3;
@@ -67,7 +67,7 @@
             <li>There is no red
         </ul>
     </p>
-    <div id="multicol-named-flow">
+    <div id="named-flow-multicol">
         <div class="named-flow-block green"></div>
         <div class="named-flow-block lightgreen"></div>
     </div>
