changed assertion per mihai's feedback

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
@@ -8,9 +8,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-001-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test checks that the named flow text
-                                 content flows through multicolumn layout that 
-                                 is applied to the region."/>
+    <meta name="assert" content="This test checks that text content in a bamed flow is 
+                                 laid out using columns when flowed in a multicolumn 
+                                 region container."/>
     <style type="text/css">
         #named-flow {
             font-family: Ahem;
