change self-describing statement per mihai's suggestion

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <p>The test passes if there are two vertical green rectangles with one light
-        green square to the right of them and no red.</p>
+        green square to the bottom right of them and no red.</p>
     <div id="named-flow">
         <div id="named-flow-child-1"></div>
         <div id="named-flow-child-2"></div>
