--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-   <p>The test passes if there is one green square on the left and two vertical 
+   <p>The test passes if there is one green square and two vertical 
        green rectangles to the right of it and no red.</p>
    <div id="named-flow">
     XXXXX XXXXX XXXXX XXXXX XXXXX
