--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-010.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-010.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-   <p>The test passes if there is one green square on the left and two vertical 
+   <p>The test passes if there is one green square and two vertical 
        green rectangles to the right of it and no red.</p>
    <div id="named-flow"></div>
    <div id="first-region"></div>
